# hm-fashion-recommender

./: .dockerignore  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements-build.txt  requirements.txt
.github/workflows/: cd.yaml  ci.yaml  deploy.yml
config/: prometheus.yml
docker/backend/: Dockerfile
docker/frontend/: Dockerfile
hm-chart/: values.yaml
hm-chart/templates/apps/: backend.yaml  frontend.yaml
hm-chart/templates/databases/: qdrant.yaml  redis.yaml
hm-chart/templates/infrastructure/: config.yaml  storage.yaml
hm-chart/templates/jobs/: ingestion.yaml
k8s/apps/: backend.yaml  frontend.yaml
k8s/databases/: qdrant.yaml  redis.yaml
k8s/infrastructure/: config.yaml  storage.yaml
k8s/jobs/: ingestion.yaml
onnx_model/: config.json
requirements/: backend.txt  base.txt  dev.txt  frontend.txt
scripts/: migrate_to_cloud.py  traffic_generator.py
src/api/: app.py  requirements.txt
src/components/: data_transformation.py
src/models/: export_onnx.py
src/pipelines/: inference_pipeline.py  ingestion_pipeline.py
src/ui/: dashboard.py
src/utils/: common.py  logger.py
terraform/: main.tf
tests/: conftest.py  stress_test.py  test_api.py
tests/integration/: test_api.py
tests/load/: locustfile.py  stress_test.py
tests/unit/: test_api_endpoints.py  test_pipeline_logic.py
